# nexus-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  highlevel_requirements.md
.claude/: CLAUDE.md  backend.md  frontend.md
.claude/commands/: speckit.implement.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: worktrees.json.template
.specify/scripts/bash/: common.sh  create-new-feature.sh  manage-worktrees.sh
.specify/templates/: plan-template.md  tasks-template.md
backend/: .env.example  README.md  nexus.db  pyproject.toml
backend/src/nexus_api/: __init__.py  config.py  main.py
backend/src/nexus_api/data/: __init__.py  mock_data.py
backend/src/nexus_api/db/: __init__.py  database.py  tables.py
backend/src/nexus_api/models/: __init__.py  analysis.py  person.py  repository.py
backend/src/nexus_api/routers/: __init__.py  analysis.py  people.py  repositories.py
backend/src/nexus_api/services/: __init__.py  alert_service.py  analysis_service.py  commit_service.py  metrics.py  person_service.py  repository_service.py  seed_service.py
backend/src/nexus_api/testing/: validation_helpers.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_alert_service.py  test_analysis_service.py  test_database.py  test_metrics.py  test_models.py  test_person_service.py  test_repository_router.py  test_services.py  test_tables.py
docs/: data_dictionary.md  database.md
frontend/: index.html  pnpm-lock.yaml
frontend/src/components/: PersonDashboard.tsx  PlanningAssistant.tsx  RepositoryDashboard.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: analysis.ts  index.ts  people.ts  repositories.ts
specs/000-backend-api/: plan.md  tasks.md
specs/000-backend-api/contracts/: openapi.yaml
specs/001-backend-api/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-backend-api/checklists/: requirements.md
specs/001-data-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-data-models/checklists/: requirements.md
specs/001-data-models/contracts/: api-v1.yaml
specs/002-code-review/: complexity-analysis.md  duplication-report.md  plan.md  quickstart.md  refactoring-summary.md  research.md  spec.md  tasks.md
specs/002-code-review/checklists/: requirements.md
